--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -149,14 +149,17 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="40dp"
         android:fontFamily="@font/ubuntu"
-        android:text="Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. Learn more"
+        android:text="@string/info_text"
+        android:autoLink="all"
+        android:linksClickable="true"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/day_edit_text"
-        app:layout_constraintVertical_bias="0.947" />
+        app:layout_constraintVertical_bias="0.947"
+        android:focusable="true" />
 
     <Button
         android:id="@+id/button"
