--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
-            type="com.dino.validator.ValidateViewModel" />
+            type="com.dino.validator.validation.ValidateViewModel" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ValidateActivity">
+        tools:context=".validation.ValidateActivity">
 
         <ImageView
             android:id="@+id/logo_image"
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             android:fontFamily="@font/ubuntu_bold"
             android:text="@string/pan_number"
             android:textSize="12sp"
@@ -65,13 +65,14 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/edit_text_border"
             android:ems="10"
+            android:fontFamily="@font/ubuntu"
             android:gravity="start|center_vertical"
             android:hint="@string/pan_number"
-            android:text="@={viewModel.panNumber}"
             android:importantForAutofill="no"
             android:inputType="textCapCharacters"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
+            android:text="@={viewModel.panNumber}"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -102,15 +103,16 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/edit_text_border"
             android:ems="10"
-            android:maxLength="2"
+            android:focusable="false"
+            android:fontFamily="@font/ubuntu"
             android:gravity="center"
             android:hint="@string/day"
-            android:text="@={viewModel.day}"
             android:importantForAutofill="no"
-            android:focusable="false"
             android:inputType="number"
-            android:textSize="14sp"
+            android:maxLength="2"
             android:onClick="@{() -> viewModel.onDateClick()}"
+            android:text="@={viewModel.day}"
+            android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/month_edit_text"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -123,19 +125,20 @@
             android:layout_height="40dp"
             android:background="@drawable/edit_text_border"
             android:ems="10"
-            android:gravity="center"
             android:focusable="false"
+            android:fontFamily="@font/ubuntu"
+            android:gravity="center"
             android:hint="@string/month"
+            android:importantForAutofill="no"
+            android:inputType="number"
             android:onClick="@{() -> viewModel.onDateClick()}"
             android:text="@={viewModel.month}"
-            android:inputType="number"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/day_edit_text"
             app:layout_constraintEnd_toStartOf="@+id/year_edit_text"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/day_edit_text"
-            app:layout_constraintTop_toTopOf="@+id/day_edit_text"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toTopOf="@+id/day_edit_text" />
 
         <EditText
             android:id="@+id/year_edit_text"
@@ -144,14 +147,15 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/edit_text_border"
             android:ems="10"
-            android:gravity="center"
-            android:onClick="@{() -> viewModel.onDateClick()}"
-            android:hint="@string/year"
-            android:inputType="number"
             android:focusable="false"
-            android:textSize="14sp"
-            android:text="@={viewModel.year}"
+            android:fontFamily="@font/ubuntu"
+            android:gravity="center"
+            android:hint="@string/year"
             android:importantForAutofill="no"
+            android:inputType="number"
+            android:onClick="@{() -> viewModel.onDateClick()}"
+            android:text="@={viewModel.year}"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/month_edit_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -184,9 +188,10 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="12dp"
-            android:text="@string/next"
             android:enabled="@{(viewModel.isPanValid() &amp;&amp; viewModel.isDateValid())}"
             android:onClick="@{() -> viewModel.onNextClick()}"
+            android:text="@string/next"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/no_pan_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
