--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -16,7 +16,7 @@
             android:id="@+id/logo_image"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="24dp"
             android:contentDescription="@string/logo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
             android:id="@+id/title_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="35dp"
             android:layout_marginEnd="90dp"
             android:fontFamily="@font/ubuntu_bold"
@@ -46,7 +46,7 @@
             android:id="@+id/pan_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="60dp"
             android:fontFamily="@font/ubuntu_bold"
             android:text="@string/pan_number"
@@ -60,9 +60,9 @@
             android:id="@+id/pan_edit_text"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="@dimen/margin_end"
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:fontFamily="@font/ubuntu"
@@ -70,9 +70,10 @@
             android:hint="@string/pan_number"
             android:importantForAutofill="no"
             android:inputType="textCapCharacters"
-            android:paddingStart="8dp"
+            android:paddingStart="10dp"
             android:paddingEnd="8dp"
             android:text="@={viewModel.panNumber}"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -83,7 +84,7 @@
             android:id="@+id/birthdate_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/ubuntu_bold"
             android:text="@string/birth_date"
@@ -99,8 +100,8 @@
             android:id="@+id/day_edit_text"
             android:layout_width="70dp"
             android:layout_height="40dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginTop="4dp"
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:focusable="false"
@@ -112,6 +113,7 @@
             android:maxLength="2"
             android:onClick="@{() -> viewModel.onDateClick()}"
             android:text="@={viewModel.day}"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/month_edit_text"
             app:layout_constraintHorizontal_bias="0.5"
@@ -133,6 +135,7 @@
             android:inputType="number"
             android:onClick="@{() -> viewModel.onDateClick()}"
             android:text="@={viewModel.month}"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/day_edit_text"
             app:layout_constraintEnd_toStartOf="@+id/year_edit_text"
@@ -144,7 +147,7 @@
             android:id="@+id/year_edit_text"
             android:layout_width="140dp"
             android:layout_height="40dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="@dimen/margin_end"
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:focusable="false"
@@ -155,6 +158,7 @@
             android:inputType="number"
             android:onClick="@{() -> viewModel.onDateClick()}"
             android:text="@={viewModel.year}"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/month_edit_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -166,27 +170,27 @@
             android:id="@+id/info_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="40dp"
-            android:fontFamily="@font/ubuntu"
-            android:text="@string/info_text"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginEnd="90dp"
             android:autoLink="all"
+            android:focusable="true"
+            android:fontFamily="@font/ubuntu"
             android:linksClickable="true"
+            android:text="@string/info_text"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/next_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/day_edit_text"
-            app:layout_constraintVertical_bias="0.947"
-            android:focusable="true" />
+            app:layout_constraintVertical_bias="0.947" />
 
         <Button
             android:id="@+id/next_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginEnd="@dimen/margin_end"
             android:layout_marginBottom="12dp"
             android:enabled="@{(viewModel.isPanValid() &amp;&amp; viewModel.isDateValid())}"
             android:onClick="@{() -> viewModel.onNextClick()}"
